# star_game

./: .gitignore  CMakeLists.txt  README.md
android/app/: CMakeLists.txt
app/: build.gradle  build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/cpp/game/: Asteroid.cpp  Asteroid.h  Bullet.cpp  Bullet.h  Game.cpp  Game.h  Player.cpp  Player.h
app/src/main/java/com/example/myapplication/: MainActivity.kt
gradle/wrapper/: gradle-wrapper.properties
src/: Bullet.cpp  Bullet.h  GameManager.cpp  GameManager.h  Ship.cpp  Ship.h  main.cpp
src/game/: GameManager.cpp  GameManager.h
src/models/: Asteroid.cpp  Asteroid.h
